added roles endpoint to API
